--- a/pgk/template/cloud-config.yaml.tmpl
+++ b/pgk/template/cloud-config.yaml.tmpl
@@ -12,17 +12,17 @@ packages:
   - apt-transport-https
   - ca-certificates
   - curl
-  - openjdk-16-jre-headless
+  - {{if eq .Edition "java"}} openjdk-16-jre-headless {{else if eq .Edition "bedrock"}} unzip {{end}}
   - fail2ban
 
 fs_setup:
   - label: minecraft
-    device: /dev/vdc
+    device: /dev/{{.Mount}}
     filesystem: xfs
     overwrite: false
 
 mounts:
-  - [/dev/vdc, /minecraft]
+  - [/dev/{{.Mount}}, /minecraft]
 
 # Enable ipv4 forwarding, required on CIS hardened machines
 write_files:
@@ -31,7 +31,7 @@ write_files:
       net.ipv4.conf.all.forwarding=1
   - path: /tmp/server.properties
     content: |
-      <properties>
+      {{ .Properties }}
   - path: /tmp/prometheus.yml
     content: |
       global:
@@ -89,7 +89,11 @@ write_files:
       [Service]
       WorkingDirectory=/minecraft
       Type=simple
+      {{if eq .Edition "java"}}
       ExecStart=/usr/bin/java -Xmx2G -Xms2G -jar server.jar nogui
+      {{else if eq .Edition "bedrock"}}
+      ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
+      {{end}}
       Restart=on-failure
       RestartSec=5
 
@@ -124,13 +128,23 @@ runcmd:
 
   - ufw allow ssh
   - ufw allow 5201
+  {{if eq .Edition "java"}}
   - ufw allow proto udp to 0.0.0.0/0 port 25565
+  {{else if eq .Edition "bedrock"}}
+  - ufw allow proto udp to 0.0.0.0/0 port 19132
+  {{end}}
   - echo [DEFAULT] | sudo tee -a /etc/fail2ban/jail.local
   - echo banaction = ufw | sudo tee -a /etc/fail2ban/jail.local
   - echo [sshd] | sudo tee -a /etc/fail2ban/jail.local
   - echo enabled = true | sudo tee -a /etc/fail2ban/jail.local
   - sudo systemctl restart fail2ban
+  {{if eq .Edition "java"}}
   - curl -sLSf https://launcher.mojang.com/v1/objects/0a269b5f2c5b93b1712d0f5dc43b6182b9ab254e/server.jar > /minecraft/server.jar
+  {{else if eq .Edition "bedrock"}}
+  - curl -sLSf https://minecraft.azureedge.net/bin-linux/bedrock-server-1.17.2.01.zip > /tmp/bedrock-server.zip
+  - unzip -o /tmp/bedrock-server.zip -d /minecraft
+  - chmod +x /minecraft/bedrock_server
+  {{end}}
   - echo "eula=true" > /minecraft/eula.txt
   - mv /tmp/server.properties /minecraft/server.properties
   - systemctl restart minecraft.service
