--- a/pgk/template/civo.sh.tmpl
+++ b/pgk/template/civo.sh.tmpl
@@ -1,7 +1,13 @@
 #!/bin/bash
 
 tee /tmp/server.properties <<EOF
-{{ .Properties }}
+{{ .Spec.Minecraft.Properties }}
+{{- if .Spec.Minecraft.Java.Rcon.Enabled -}}
+broadcast-rcon-to-ops={{.Spec.Minecraft.Java.Rcon.Broadcast}}
+rcon.port={{.Spec.Minecraft.Java.Rcon.Port}}
+enable-rcon={{.Spec.Minecraft.Java.Rcon.Enabled}}
+rcon.password={{.Spec.Minecraft.Java.Rcon.Password}}
+{{- end }}
 EOF
 
 tee /tmp/prometheus.yml <<EOF
@@ -17,6 +23,12 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['localhost:9100']
+  {{- if eq .Spec.Minecraft.Edition "java" }}
+  - job_name: 'minecraft_exporter'
+    scrape_interval: 1m
+    static_configs:
+      - targets: ['localhost:9150']
+  {{- end }}
 EOF
 tee /etc/systemd/system/prometheus.service <<EOF
 [Unit]
@@ -52,6 +64,22 @@ ExecStart=/usr/local/bin/node_exporter
 [Install]
 WantedBy=multi-user.target
 EOF
+{{- if eq .Spec.Minecraft.Edition "java" }}
+tee /etc/systemd/system/minecraft-prometheus-exporter.service <<EOF
+[Unit]
+Description=Minecraft Exporter
+Wants=network-online.target
+After=network-online.target
+[Service]
+User=minecraft_exporter
+Group=minecraft_exporter
+Type=simple
+ExecStart=/usr/local/bin/minecraft-prometheus-exporter \
+  --mc.rcon-password={{.Spec.Minecraft.Java.Rcon.Password}}
+[Install]
+WantedBy=multi-user.target
+EOF
+{{ end }}
 tee /etc/systemd/system/minecraft.service <<EOF
 [Unit]
 Description=Minecraft Server
@@ -60,32 +88,35 @@ Documentation=https://www.minecraft.net/en-us/download/server
 [Service]
 WorkingDirectory=/minecraft
 Type=simple
-{{if eq .Edition "java"}}
-ExecStart=/usr/bin/java -Xmx2G -Xms2G -jar server.jar nogui
-{{else if eq .Edition "bedrock"}}
+{{- if eq .Spec.Minecraft.Edition "java" }}
+ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}} -jar server.jar nogui
+{{ else if eq .Spec.Minecraft.Edition "bedrock" }}
 ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
-{{end}}
+{{- end }}
 Restart=on-failure
 RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
 EOF
-apt-get install -y apt-transport-https ca-certificates curl {{if eq .Edition "java"}} openjdk-16-jre-headless {{else if eq .Edition "bedrock"}} unzip {{end}} fail2ban
+apt-get install -y apt-transport-https ca-certificates curl {{if eq .Spec.Minecraft.Edition "java"}}openjdk-16-jre-headless{{else if eq .Spec.Minecraft.Edition "bedrock"}}unzip{{end}} fail2ban
 
 useradd prometheus -s /bin/false
 useradd node_exporter -s /bin/false
+{{- if eq .Spec.Minecraft.Edition "java" }}
+useradd minecraft_exporter -s /bin/false
+{{- end }}
 
-
+export PROM_VERSION=2.28.1
 mkdir /etc/prometheus
 mkdir /var/lib/prometheus
-curl -sSL https://github.com/prometheus/prometheus/releases/download/v2.27.1/prometheus-2.27.1.linux-amd64.tar.gz | tar -xz
-cp prometheus-2.27.1.linux-amd64/prometheus /usr/local/bin/
-cp prometheus-2.27.1.linux-amd64/promtool /usr/local/bin/
+curl -sSL https://github.com/prometheus/prometheus/releases/download/v$PROM_VERSION/prometheus-$PROM_VERSION.linux-amd64.tar.gz | tar -xz
+cp prometheus-$PROM_VERSION.linux-amd64/prometheus /usr/local/bin/
+cp prometheus-$PROM_VERSION.linux-amd64/promtool /usr/local/bin/
 chown prometheus:prometheus /usr/local/bin/prometheus
 chown prometheus:prometheus /usr/local/bin/promtool
-cp -r prometheus-2.27.1.linux-amd64/consoles /etc/prometheus
-cp -r prometheus-2.27.1.linux-amd64/console_libraries /etc/prometheus
+cp -r prometheus-$PROM_VERSION.linux-amd64/consoles /etc/prometheus
+cp -r prometheus-$PROM_VERSION.linux-amd64/console_libraries /etc/prometheus
 chown -R prometheus:prometheus /var/lib/prometheus
 chown -R prometheus:prometheus /etc/prometheus/consoles
 chown -R prometheus:prometheus /etc/prometheus/console_libraries
@@ -95,20 +126,30 @@ systemctl daemon-reload
 systemctl start prometheus
 systemctl enable prometheus
 
-curl -sSL https://github.com/prometheus/node_exporter/releases/download/v1.1.2/node_exporter-1.1.2.linux-amd64.tar.gz | tar -xz
-cp node_exporter-1.1.2.linux-amd64/node_exporter /usr/local/bin
+export NODE_EXPORTER_VERSION=1.1.2
+curl -sSL https://github.com/prometheus/node_exporter/releases/download/v$NODE_EXPORTER_VERSION/node_exporter-$NODE_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+cp node_exporter-$NODE_EXPORTER_VERSION.linux-amd64/node_exporter /usr/local/bin
 chown node_exporter:node_exporter /usr/local/bin/node_exporter
 systemctl daemon-reload
 systemctl start node_exporter
 systemctl enable node_exporter
 
+{{ if eq .Spec.Minecraft.Edition "java" -}}
+export MINECRAFT_EXPORTER_VERSION=0.3.1
+curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-prometheus-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+cp minecraft-prometheus-exporter /usr/local/bin
+chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-prometheus-exporter
+systemctl start minecraft-prometheus-exporter.service
+systemctl enable minecraft-prometheus-exporter.service
+{{ end -}}
+
 ufw allow ssh
 ufw allow 5201
-{{if eq .Edition "java"}}
+{{ if eq .Spec.Minecraft.Edition "java" }}
 ufw allow proto udp to 0.0.0.0/0 port 25565
-{{else if eq .Edition "bedrock"}}
+{{ else if eq .Spec.Minecraft.Edition "bedrock" -}}
 ufw allow proto udp to 0.0.0.0/0 port 19132
-{{end}}
+{{- end }}
 
 echo [DEFAULT] | sudo tee -a /etc/fail2ban/jail.local
 echo banaction = ufw | sudo tee -a /etc/fail2ban/jail.local
@@ -116,13 +157,13 @@ echo [sshd] | sudo tee -a /etc/fail2ban/jail.local
 echo enabled = true | sudo tee -a /etc/fail2ban/jail.local
 sudo systemctl restart fail2ban
 mkdir /minecraft
-{{if eq .Edition "java"}}
+{{ if eq .Spec.Minecraft.Edition "java" -}}
 curl -sLSf https://launcher.mojang.com/v1/objects/a16d67e5807f57fc4e550299cf20226194497dc2/server.jar > /minecraft/server.jar
-{{else if eq .Edition "bedrock"}}
+{{ else if eq .Spec.Minecraft.Edition "bedrock" -}}
 curl -sLSf https://minecraft.azureedge.net/bin-linux/bedrock-server-1.17.2.01.zip > /tmp/bedrock-server.zip
 unzip -o /tmp/bedrock-server.zip -d /minecraft
 chmod +x /minecraft/bedrock_server
-{{end}}
+{{- end }}
 echo "eula=true" > /minecraft/eula.txt
 mv /tmp/server.properties /minecraft/server.properties
 systemctl restart minecraft.service
