--- a/pgk/template/cloud-config.yaml.tmpl
+++ b/pgk/template/cloud-config.yaml.tmpl
@@ -5,6 +5,10 @@ users:
     shell: /bin/false
   - name: node_exporter
     shell: /bin/false
+  {{ if eq .Spec.Minecraft.Edition "java" -}}
+  - name: minecraft_exporter
+    shell: /bin/false
+  {{- end }}
 
 package_update: true
 
@@ -12,7 +16,7 @@ packages:
   - apt-transport-https
   - ca-certificates
   - curl
-  - {{if eq .Edition "java"}} openjdk-16-jre-headless {{else if eq .Edition "bedrock"}} unzip {{end}}
+  - {{if eq .Spec.Minecraft.Edition "java"}}openjdk-16-jre-headless{{else if eq .Spec.Minecraft.Edition "bedrock"}}unzip{{end}}
   - fail2ban
 
 fs_setup:
@@ -31,7 +35,15 @@ write_files:
       net.ipv4.conf.all.forwarding=1
   - path: /tmp/server.properties
     content: |
-      {{ .Properties }}
+      {{- range $element := .Properties }}
+       {{ $element -}}
+      {{- end -}}
+      {{- if .Spec.Minecraft.Java.Rcon.Enabled -}}
+       broadcast-rcon-to-ops={{.Spec.Minecraft.Java.Rcon.Broadcast}}
+       rcon.port={{.Spec.Minecraft.Java.Rcon.Port}}
+       enable-rcon={{.Spec.Minecraft.Java.Rcon.Enabled}}
+       rcon.password={{.Spec.Minecraft.Java.Rcon.Password}}
+      {{- end }}
   - path: /tmp/prometheus.yml
     content: |
       global:
@@ -46,13 +58,18 @@ write_files:
           scrape_interval: 5s
           static_configs:
             - targets: ['localhost:9100']
+        {{- if eq .Spec.Minecraft.Edition "java" }}
+        - job_name: 'minecraft_exporter'
+          scrape_interval: 1m
+          static_configs:
+            - targets: ['localhost:9150']
+        {{- end }}
   - path: /etc/systemd/system/prometheus.service
     content: |
       [Unit]
       Description=Prometheus
       Wants=network-online.target
       After=network-online.target
-
       [Service]
       User=prometheus
       Group=prometheus
@@ -62,7 +79,6 @@ write_files:
           --storage.tsdb.path /var/lib/prometheus/ \
           --web.console.templates=/etc/prometheus/consoles \
           --web.console.libraries=/etc/prometheus/console_libraries
-
       [Install]
       WantedBy=multi-user.target
   - path: /etc/systemd/system/node_exporter.service
@@ -71,45 +87,58 @@ write_files:
       Description=Node Exporter
       Wants=network-online.target
       After=network-online.target
-
       [Service]
       User=node_exporter
       Group=node_exporter
       Type=simple
       ExecStart=/usr/local/bin/node_exporter
-
       [Install]
       WantedBy=multi-user.target
+  {{ if eq .Spec.Minecraft.Edition "java" -}}
+  - path: /etc/systemd/system/minecraft-prometheus-exporter.service
+    content: |
+      [Unit]
+      Description=Minecraft Exporter
+      Wants=network-online.target
+      After=network-online.target
+      [Service]
+      User=minecraft_exporter
+      Group=minecraft_exporter
+      Type=simple
+      ExecStart=/usr/local/bin/minecraft-prometheus-exporter \
+          --mc.rcon-password={{.Spec.Minecraft.Java.Rcon.Password}}
+      [Install]
+      WantedBy=multi-user.target
+  {{ end -}}
   - path: /etc/systemd/system/minecraft.service
     content: |
       [Unit]
       Description=Minecraft Server
       Documentation=https://www.minecraft.net/en-us/download/server
-
       [Service]
       WorkingDirectory=/minecraft
       Type=simple
-      {{if eq .Edition "java"}}
-      ExecStart=/usr/bin/java -Xmx2G -Xms2G -jar server.jar nogui
-      {{else if eq .Edition "bedrock"}}
+      {{- if eq .Spec.Minecraft.Edition "java" }}
+      ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}} -jar server.jar nogui
+      {{ else if eq .Spec.Minecraft.Edition "bedrock" }}
       ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
-      {{end}}
+      {{- end }}
       Restart=on-failure
       RestartSec=5
-
       [Install]
       WantedBy=multi-user.target
 
 runcmd:
+  - export PROM_VERSION=2.28.1
   - mkdir /etc/prometheus
   - mkdir /var/lib/prometheus
-  - curl -sSL https://github.com/prometheus/prometheus/releases/download/v2.27.1/prometheus-2.27.1.linux-amd64.tar.gz | tar -xz
-  - cp prometheus-2.27.1.linux-amd64/prometheus /usr/local/bin/
-  - cp prometheus-2.27.1.linux-amd64/promtool /usr/local/bin/
+  - curl -sSL https://github.com/prometheus/prometheus/releases/download/v$PROM_VERSION/prometheus-$PROM_VERSION.linux-amd64.tar.gz | tar -xz
+  - cp prometheus-$PROM_VERSION.linux-amd64/prometheus /usr/local/bin/
+  - cp prometheus-$PROM_VERSION.linux-amd64/promtool /usr/local/bin/
   - chown prometheus:prometheus /usr/local/bin/prometheus
   - chown prometheus:prometheus /usr/local/bin/promtool
-  - cp -r prometheus-2.27.1.linux-amd64/consoles /etc/prometheus
-  - cp -r prometheus-2.27.1.linux-amd64/console_libraries /etc/prometheus
+  - cp -r prometheus-$PROM_VERSION.linux-amd64/consoles /etc/prometheus
+  - cp -r prometheus-$PROM_VERSION.linux-amd64/console_libraries /etc/prometheus
   - chown -R prometheus:prometheus /var/lib/prometheus
   - chown -R prometheus:prometheus /etc/prometheus/consoles
   - chown -R prometheus:prometheus /etc/prometheus/console_libraries
@@ -119,32 +148,42 @@ runcmd:
   - systemctl start prometheus
   - systemctl enable prometheus
 
-  - curl -sSL https://github.com/prometheus/node_exporter/releases/download/v1.1.2/node_exporter-1.1.2.linux-amd64.tar.gz | tar -xz
-  - cp node_exporter-1.1.2.linux-amd64/node_exporter /usr/local/bin
+  - export NODE_EXPORTER_VERSION=1.1.2
+  - curl -sSL https://github.com/prometheus/node_exporter/releases/download/v$NODE_EXPORTER_VERSION/node_exporter-$NODE_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+  - cp node_exporter-$NODE_EXPORTER_VERSION.linux-amd64/node_exporter /usr/local/bin
   - chown node_exporter:node_exporter /usr/local/bin/node_exporter
   - systemctl daemon-reload
   - systemctl start node_exporter
   - systemctl enable node_exporter
 
+  {{ if eq .Spec.Minecraft.Edition "java" -}}
+  - export MINECRAFT_EXPORTER_VERSION=0.3.1
+  - curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-prometheus-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+  - cp minecraft-prometheus-exporter /usr/local/bin
+  - chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-prometheus-exporter
+  - systemctl start minecraft-prometheus-exporter.service
+  - systemctl enable minecraft-prometheus-exporter.service
+  {{ end -}}
+
   - ufw allow ssh
   - ufw allow 5201
-  {{if eq .Edition "java"}}
+  {{ if eq .Spec.Minecraft.Edition "java" -}}
   - ufw allow proto udp to 0.0.0.0/0 port 25565
-  {{else if eq .Edition "bedrock"}}
+  {{ else if eq .Spec.Minecraft.Edition "bedrock" -}}
   - ufw allow proto udp to 0.0.0.0/0 port 19132
-  {{end}}
+  {{ end -}}
   - echo [DEFAULT] | sudo tee -a /etc/fail2ban/jail.local
   - echo banaction = ufw | sudo tee -a /etc/fail2ban/jail.local
   - echo [sshd] | sudo tee -a /etc/fail2ban/jail.local
   - echo enabled = true | sudo tee -a /etc/fail2ban/jail.local
   - sudo systemctl restart fail2ban
-  {{if eq .Edition "java"}}
+  {{ if eq .Spec.Minecraft.Edition "java" -}}
   - curl -sLSf https://launcher.mojang.com/v1/objects/a16d67e5807f57fc4e550299cf20226194497dc2/server.jar > /minecraft/server.jar
-  {{else if eq .Edition "bedrock"}}
+  {{ else if eq .Spec.Minecraft.Edition "bedrock" -}}
   - curl -sLSf https://minecraft.azureedge.net/bin-linux/bedrock-server-1.17.2.01.zip > /tmp/bedrock-server.zip
   - unzip -o /tmp/bedrock-server.zip -d /minecraft
   - chmod +x /minecraft/bedrock_server
-  {{end}}
+  {{- end }}
   - echo "eula=true" > /minecraft/eula.txt
   - mv /tmp/server.properties /minecraft/server.properties
   - systemctl restart minecraft.service
