Update minecraft-exporter version

--- a/pgk/template/civo.sh.tmpl
+++ b/pgk/template/civo.sh.tmpl
@@ -65,7 +65,7 @@ ExecStart=/usr/local/bin/node_exporter
 WantedBy=multi-user.target
 EOF
 {{- if eq .Spec.Minecraft.Edition "java" }}
-tee /etc/systemd/system/minecraft-prometheus-exporter.service <<EOF
+tee /etc/systemd/system/minecraft-exporter.service <<EOF
 [Unit]
 Description=Minecraft Exporter
 Wants=network-online.target
@@ -74,7 +74,7 @@ After=network-online.target
 User=minecraft_exporter
 Group=minecraft_exporter
 Type=simple
-ExecStart=/usr/local/bin/minecraft-prometheus-exporter \
+ExecStart=/usr/local/bin/minecraft-exporter \
   --mc.rcon-password={{.Spec.Minecraft.Java.Rcon.Password}}
 [Install]
 WantedBy=multi-user.target
@@ -135,12 +135,12 @@ systemctl start node_exporter
 systemctl enable node_exporter
 
 {{ if eq .Spec.Minecraft.Edition "java" -}}
-export MINECRAFT_EXPORTER_VERSION=0.3.1
-curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-prometheus-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
-cp minecraft-prometheus-exporter /usr/local/bin
-chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-prometheus-exporter
-systemctl start minecraft-prometheus-exporter.service
-systemctl enable minecraft-prometheus-exporter.service
+export MINECRAFT_EXPORTER_VERSION=0.4.0
+curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+cp minecraft-exporter /usr/local/bin
+chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-exporter
+systemctl start minecraft-exporter.service
+systemctl enable minecraft-exporter.service
 {{ end -}}
 
 ufw allow ssh
