--- a/pgk/template/cloud-config.yaml.tmpl
+++ b/pgk/template/cloud-config.yaml.tmpl
@@ -95,7 +95,7 @@ write_files:
       [Install]
       WantedBy=multi-user.target
   {{ if eq .Spec.Minecraft.Edition "java" -}}
-  - path: /etc/systemd/system/minecraft-prometheus-exporter.service
+  - path: /etc/systemd/system/minecraft-exporter.service
     content: |
       [Unit]
       Description=Minecraft Exporter
@@ -105,7 +105,7 @@ write_files:
       User=minecraft_exporter
       Group=minecraft_exporter
       Type=simple
-      ExecStart=/usr/local/bin/minecraft-prometheus-exporter \
+      ExecStart=/usr/local/bin/minecraft-exporter \
           --mc.rcon-password={{.Spec.Minecraft.Java.Rcon.Password}}
       [Install]
       WantedBy=multi-user.target
@@ -157,12 +157,12 @@ runcmd:
   - systemctl enable node_exporter
 
   {{ if eq .Spec.Minecraft.Edition "java" -}}
-  - export MINECRAFT_EXPORTER_VERSION=0.3.1
-  - curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-prometheus-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
-  - cp minecraft-prometheus-exporter /usr/local/bin
-  - chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-prometheus-exporter
-  - systemctl start minecraft-prometheus-exporter.service
-  - systemctl enable minecraft-prometheus-exporter.service
+  - export MINECRAFT_EXPORTER_VERSION=0.4.0
+  - curl -sSL https://github.com/dirien/minecraft-prometheus-exporter/releases/download/v$MINECRAFT_EXPORTER_VERSION/minecraft-exporter_$MINECRAFT_EXPORTER_VERSION.linux-amd64.tar.gz | tar -xz
+  - cp minecraft-exporter /usr/local/bin
+  - chown minecraft_exporter:minecraft_exporter /usr/local/bin/minecraft-exporter
+  - systemctl start minecraft-exporter.service
+  - systemctl enable minecraft-exporter.service
   {{ end -}}
 
   - ufw allow ssh
