Add Linode as new Cloud provider
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/pgk/template/bash.tmpl
+++ b/pgk/template/bash.tmpl
@@ -99,6 +99,7 @@ RestartSec=5
 [Install]
 WantedBy=multi-user.target
 EOF
+apt update
 apt-get install -y apt-transport-https ca-certificates curl {{if eq .Spec.Minecraft.Edition "java"}}openjdk-16-jre-headless{{else if eq .Spec.Minecraft.Edition "bedrock"}}unzip{{end}} fail2ban
 
 useradd prometheus -s /bin/false
