--- a/pgk/template/cloud-config.yaml.tmpl
+++ b/pgk/template/cloud-config.yaml.tmpl
@@ -178,9 +178,11 @@ runcmd:
   - echo enabled = true | sudo tee -a /etc/fail2ban/jail.local
   - sudo systemctl restart fail2ban
   {{ if eq .Spec.Minecraft.Edition "java" -}}
-  - curl -sLSf https://launcher.mojang.com/v1/objects/a16d67e5807f57fc4e550299cf20226194497dc2/server.jar > /minecraft/server.jar
+  - URL=$(curl -s https://java-version.minectl.ediri.online/binary/{{ .Spec.Minecraft.Version }})
+  - curl -sLSf $URL > /minecraft/server.jar
   {{ else if eq .Spec.Minecraft.Edition "bedrock" -}}
-  - curl -sLSf https://minecraft.azureedge.net/bin-linux/bedrock-server-1.17.10.04.zip > /tmp/bedrock-server.zip
+  - URL=$(curl -s https://bedrock-version.minectl.ediri.online/binary/{{ .Spec.Minecraft.Version }})
+  - curl -sLSf $URL > /tmp/bedrock-server.zip
   - unzip -o /tmp/bedrock-server.zip -d /minecraft
   - chmod +x /minecraft/bedrock_server
   {{- end }}
