--- a/pkg/template/templates/bash/bash.tmpl
+++ b/pkg/template/templates/bash/bash.tmpl
@@ -24,7 +24,7 @@ Documentation=https://www.minecraft.net/en-us/download/server
 WorkingDirectory=/minecraft
 Type=simple
 {{- if ne .Spec.Minecraft.Edition "bedrock" }}
-ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}} -jar server.jar nogui
+ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui
 {{ else if eq .Spec.Minecraft.Edition "bedrock" }}
 ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
 {{- end }}
