Adds support for additional java options
Signed-off-by: Robert Igl <robert.igl@mail.schwarz>

--- a/pkg/template/templates/cloud-init/proxy-cloud-config.yaml.tmpl
+++ b/pkg/template/templates/cloud-init/proxy-cloud-config.yaml.tmpl
@@ -18,7 +18,7 @@ write_files:
       [Service]
       WorkingDirectory=/minecraft
       Type=simple
-      ExecStart=/usr/bin/java -Xmx{{.Spec.Proxy.Java.Xmx}} -Xms{{.Spec.Proxy.Java.Xms}} -jar proxy.jar
+      ExecStart=/usr/bin/java -Xmx{{.Spec.Proxy.Java.Xmx}} -Xms{{.Spec.Proxy.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar proxy.jar
       Restart=on-failure
       RestartSec=5
       [Install]
