--- a/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
+++ b/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
@@ -59,7 +59,7 @@ write_files:
       WorkingDirectory=/minecraft
       Type=simple
       {{- if ne .Spec.Minecraft.Edition "bedrock" }}
-      ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}} -jar server.jar nogui
+      ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui
       {{ else if eq .Spec.Minecraft.Edition "bedrock" }}
       ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
       {{- end }}
