New cloud provider - Oracle/OCI
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/pkg/template/templates/bash/bash.tmpl
+++ b/pkg/template/templates/bash/bash.tmpl
@@ -1,6 +1,6 @@
 {{- define "bash" -}}
 #!/bin/bash
-
+iptables -I INPUT -j ACCEPT
 tee /tmp/server.properties <<EOF
 server-port={{.Spec.Server.Port}}
 {{ .Spec.Minecraft.Properties }}
