--- a/pkg/template/templates/bash/bash.tmpl
+++ b/pkg/template/templates/bash/bash.tmpl
@@ -24,7 +24,7 @@ Documentation=https://www.minecraft.net/en-us/download/server
 WorkingDirectory=/minecraft
 Type=simple
 {{- if ne .Spec.Minecraft.Edition "bedrock" }}
-ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui {{- if eq .Spec.Minecraft.Edition "nukkit" }} --language eng {{- end }}
+ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui {{- if or (eq .Spec.Minecraft.Edition "nukkit") (eq .Spec.Minecraft.Edition "powernukkit") }} --language eng {{- end }}
 {{ else if eq .Spec.Minecraft.Edition "bedrock" }}
 ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
 {{- end }}
@@ -41,7 +41,7 @@ apt-get install -y apt-transport-https ca-certificates curl {{if ne .Spec.Minecr
 {{- end }}
 ufw allow ssh
 ufw allow 5201
-{{ if and (ne .Spec.Minecraft.Edition "bedrock") (ne .Spec.Minecraft.Edition "nukkit") }}
+{{ if and (ne .Spec.Minecraft.Edition "bedrock") (ne .Spec.Minecraft.Edition "nukkit") (ne .Spec.Minecraft.Edition "powernukkit") }}
 ufw allow proto tcp to 0.0.0.0/0 port {{.Spec.Server.Port}}
 {{ else -}}
 ufw allow proto udp to 0.0.0.0/0 port {{.Spec.Server.Port}}
@@ -73,6 +73,8 @@ echo "/dev/{{ .Mount }} /minecraft ext4 defaults,noatime,nofail 0 2" >> /etc/fst
 {{- template "forge-binary" . }}
 {{- else if eq .Spec.Minecraft.Edition "nukkit" }}
 {{- template "nukkit-binary" . }}
+{{- else if eq .Spec.Minecraft.Edition "powernukkit" }}
+{{- template "powernukkit-binary" . }}
 {{- end }}
 echo "eula={{ .Spec.Minecraft.Eula }}" > /minecraft/eula.txt
 mv /tmp/server.properties /minecraft/server.properties
