--- a/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
+++ b/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
@@ -59,7 +59,7 @@ write_files:
       WorkingDirectory=/minecraft
       Type=simple
       {{- if ne .Spec.Minecraft.Edition "bedrock" }}
-      ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui {{- if eq .Spec.Minecraft.Edition "nukkit" }} --language eng {{- end }}
+      ExecStart=/usr/bin/java -Xmx{{.Spec.Minecraft.Java.Xmx}} -Xms{{.Spec.Minecraft.Java.Xms}}{{range .Spec.Minecraft.Java.Options }} {{.}}{{end}} -jar server.jar nogui {{- if or (eq .Spec.Minecraft.Edition "nukkit") (eq .Spec.Minecraft.Edition "powernukkit") }} --language eng {{- end }}
       {{ else if eq .Spec.Minecraft.Edition "bedrock" }}
       ExecStart=/bin/sh -c "LD_LIBRARY_PATH=. ./bedrock_server"
       {{- end }}
@@ -78,7 +78,7 @@ runcmd:
   {{- end }}
   - ufw allow ssh
   - ufw allow 5201
-  {{ if and (ne .Spec.Minecraft.Edition "bedrock") (ne .Spec.Minecraft.Edition "nukkit") -}}
+  {{ if and (ne .Spec.Minecraft.Edition "bedrock") (ne .Spec.Minecraft.Edition "nukkit") (ne .Spec.Minecraft.Edition "powernukkit") -}}
   - ufw allow proto tcp to 0.0.0.0/0 port {{.Spec.Server.Port}}
   {{ else -}}
   - ufw allow proto udp to 0.0.0.0/0 port {{.Spec.Server.Port}}
@@ -102,6 +102,8 @@ runcmd:
     {{- template "forge-binary" . }}
   {{- else if eq .Spec.Minecraft.Edition "nukkit" }}
     {{- template "nukkit-binary" . }}
+  {{- else if eq .Spec.Minecraft.Edition "powernukkit" }}
+    {{- template "powernukkit-binary" . }}
   {{- end }}
   - echo "eula={{ .Spec.Minecraft.Eula }}" > /minecraft/eula.txt
   - mv /tmp/server.properties /minecraft/server.properties
