feat: add support for multipass
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
+++ b/pkg/template/templates/cloud-init/cloud-config.yaml.tmpl
@@ -1,5 +1,9 @@
 {{- define "cloud-config" -}}
 #cloud-config
+{{- if eq .Spec.Server.Cloud "multipass" }}
+ssh_authorized_keys:
+- {{.SSHPublicKey}}
+{{- end }}
 users:
   - default
   {{- if .Spec.Monitoring.Enabled }}
