feat: add support for velocity
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/pkg/template/templates/cloud-init/proxy-cloud-config.yaml.tmpl
+++ b/pkg/template/templates/cloud-init/proxy-cloud-config.yaml.tmpl
@@ -36,7 +36,10 @@ runcmd:
     {{- template "bungeecord-binary" . }}
   {{- else if eq .Spec.Proxy.Type "waterfall" }}
     {{- template "waterfall-binary" . }}
+  {{- else if eq .Spec.Proxy.Type "velocity" }}
+    {{- template "velocity-binary" . }}
   {{- end }}
+
   - systemctl restart minecraft.service
   - systemctl enable minecraft.service
 {{- end -}}
