--- a/pkg/template/templates/bash/proxy-bash.tmpl
+++ b/pkg/template/templates/bash/proxy-bash.tmpl
@@ -27,6 +27,8 @@ mkdir /minecraft
 {{- template "bungeecord-binary" . }}
 {{- else if eq .Spec.Proxy.Type "waterfall" }}
 {{- template "waterfall-binary" . }}
+{{- else if eq .Spec.Proxy.Type "velocity" }}
+{{- template "velocity-binary" . }}
 {{- end }}
 systemctl restart minecraft.service
 systemctl enable minecraft.service
