--- a/internal/template/templates/bash/bash.tmpl
+++ b/internal/template/templates/bash/bash.tmpl
@@ -41,19 +41,20 @@ apt-get install -y apt-transport-https ca-certificates curl {{if ne .Spec.Minecr
 {{- if .Spec.Monitoring.Enabled }}
 {{- template "monitoring-binaries" . }}
 {{- end }}
-ufw allow ssh
-ufw allow 5201
-{{ if and (ne .Spec.Minecraft.Edition "bedrock") (ne .Spec.Minecraft.Edition "nukkit") (ne .Spec.Minecraft.Edition "powernukkit") }}
-ufw allow proto tcp to 0.0.0.0/0 port {{.Spec.Server.Port}}
-{{ else -}}
-ufw allow proto udp to 0.0.0.0/0 port {{.Spec.Server.Port}}
-{{- end }}
 
-echo [DEFAULT] | sudo tee -a /etc/fail2ban/jail.local
-echo banaction = ufw | sudo tee -a /etc/fail2ban/jail.local
-echo [sshd] | sudo tee -a /etc/fail2ban/jail.local
-echo enabled = true | sudo tee -a /etc/fail2ban/jail.local
-sudo systemctl restart fail2ban
+sed -i 's/#Port 22/Port {{ .Spec.Server.SSH.Port }}/g' /etc/ssh/sshd_config
+service sshd restart
+
+tee /etc/fail2ban/jail.local <<EOF
+[sshd]
+port = {{ .Spec.Server.SSH.Port }}
+enabled = true
+maxretry = {{ .Spec.Server.SSH.Fail2ban.Maxretry }}
+bantime = {{ .Spec.Server.SSH.Fail2ban.Bantime }}
+ignoreip = {{ .Spec.Server.SSH.Fail2ban.Ignoreip }}
+EOF
+
+systemctl restart fail2ban
 mkdir -p /minecraft
 
 {{- if .Mount }}
