--- a/internal/template/templates/bash/bedrock-binary.tmpl
+++ b/internal/template/templates/bash/bedrock-binary.tmpl
@@ -3,4 +3,6 @@ URL=$(curl -s https://bedrock-version.minectl.ediri.online/binary/{{ .Spec.Minec
 curl -sLSf $URL > /tmp/bedrock-server.zip
 unzip -o /tmp/bedrock-server.zip -d /minecraft
 chmod +x /minecraft/bedrock_server
+wget http://security.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1l-1ubuntu1.3_amd64.deb
+dpkg -i libssl1.1_1.1.1l-1ubuntu1.3_amd64.deb
 {{- end }}
