--- a/internal/template/templates/cloud-init/cloud-config.yaml.tmpl
+++ b/internal/template/templates/cloud-init/cloud-config.yaml.tmpl
@@ -101,6 +101,8 @@ runcmd:
     {{- template "bedrock-binary" . }}
   {{- else if eq .Spec.Minecraft.Edition "papermc" }}
     {{- template "papermc-binary" . }}
+  {{- else if eq .Spec.Minecraft.Edition "purpur" }}
+    {{- template "purpur-binary" . }}
   {{- else if or (eq .Spec.Minecraft.Edition "spigot") (eq .Spec.Minecraft.Edition "craftbukkit") }}
     {{- template "spigotbukkit-binary" . }}
   {{- else if eq .Spec.Minecraft.Edition "fabric" }}
